# meowpeow

./: .gitmodules  README.md  idkey.txt  idkey.txt.pub  main.cpp
Reporte_del_proyecto/: main-dot2tex-fig1.dot  main.tex
Reporte_del_proyecto/secciones/: indices.tex  portada.tex  referencias.bib
Reporte_del_proyecto/secciones/1-Propuesta/: propuesta.tex
Reporte_del_proyecto/secciones/2-Planeacion/: Calendario.tex  Planeacion.tex  TablaDeCostes.tex  requerimientos.tex
Reporte_del_proyecto/secciones/3-AnalisisSistema/: Diagramas Procesos Detallados.tex  DiagramasVistas.tex  analisis_del_Sistema.tex  diccionario_de_datos.tex  matriz_de_procesos.tex
Reporte_del_proyecto/secciones/3-AnalisisSistema/Diagramas Generales/: DiagramaER.tex  Diagrma_actividades.tex
Reporte_del_proyecto/secciones/3-AnalisisSistema/Diagramas Procesos/: Ajuste dinámico de la dificultad.tex  Entrenamiento de IA.tex  Escalabilidad del algoritmo.tex  Generacion procedural de niveles.tex  Gestion Enemigos y Ataques.tex  Interfaz de usuario y usabilidad.tex  Manejo de guardado de datos.tex  Optimizacion del rendimiento.tex  Registro y análisis de puntuación.tex  Sistema de feedback visual y sonoro.tex
Reporte_del_proyecto/secciones/3-AnalisisSistema/Diagramas Vistas/Ajuste dificultad/: Dificultad.tex
Reporte_del_proyecto/secciones/3-AnalisisSistema/Diagramas Vistas/Entrenamiento IA/: Vista Funcional.tex  Vista Logica.tex  Vista de Ejecucion.tex  Vista de Infrestructura.tex  Vista de desarrollo.tex
Reporte_del_proyecto/secciones/3-AnalisisSistema/Diagramas Vistas/Escalabilidad del algorimto/: vistas.tex
Reporte_del_proyecto/secciones/3-AnalisisSistema/Diagramas Vistas/Feedback/: sistema de feedback.tex
Reporte_del_proyecto/secciones/3-AnalisisSistema/Diagramas Vistas/Generación Procedural de Niveles/: 1-Vista funcional.tex  2-Vista Logica.tex  3-Vistas Secuencia.tex  4-Vista de despliegue.tex  5-Vista de Estados.tex
Reporte_del_proyecto/secciones/3-AnalisisSistema/Diagramas Vistas/Interfaz de usuario y usabilidad/: vistas.tex
Reporte_del_proyecto/secciones/3-AnalisisSistema/Diagramas Vistas/Manejo guardado datos/: manejo de datos.tex
Reporte_del_proyecto/secciones/4-DiseñoSistema/: diseñoDelSistema.tex
Reporte_del_proyecto/secciones/4-DiseñoSistema/DiseñoInicialDelSistema/: DiagramaInterfaces.tex  Diagrama_de_Repo_BD.tex  Diagrma_de_Arquitectura.tex
Reporte_del_proyecto/secciones/4-DiseñoSistema/Pseudocodigos/: algoritmos.tex
Reporte_del_proyecto/secciones/info_sistemas/: info_sistema.txt
codes/: CMakeLists.txt  build_log.txt  dockerfile
codes/classes/: animation.hpp  assets.hpp  enemy.hpp  enemy_alan.hpp  enemy_bonbon.hpp  enemy_lips.hpp  enemy_projectile.hpp  enemy_simple.hpp  enemy_spawner.hpp  entity.hpp  explosion_particle.hpp  game_object.hpp  game_scene.hpp  input.hpp  math.hpp  menu_scene.hpp  player.hpp  player_projectile.hpp  projectile.hpp  scene.hpp  scene_manager.hpp  settings.hpp  texture_details.hpp  ui_overlay.hpp
codes/source_files/: animation.cpp  app.cpp  assets.cpp  enemy.cpp  enemy_alan.cpp  enemy_bonbon.cpp  enemy_lips.cpp  enemy_projectile.cpp  enemy_simple.cpp  enemy_spawner.cpp  entitiy.cpp  game_object.cpp  game_scene.cpp  math.cpp  menu_scene.cpp  player.cpp  player_projectile.cpp  projectile.cpp  scene.cpp  scene_manager.cpp  settings.cpp  ui_overlay.cpp
libraries/: PRINCIPAL.h
(+18 files in other folders)
